# freeact

./: .gitignore  Dockerfile  PROMO.md  README.md  ROADMAP.md  SKILL.md  inject_body.js  popup_trigger.js  pyproject.toml  requirements.txt
docs/: field-guide.html
freeact/: __init__.py  _handlers.py  browser.py  captcha.py  cli.py  config.py  daemon.py  extraction.py  interaction.py  live.py  logger.py  network.py  proxy.py  remote.py  session.py  skillforge.py  skills.py  state.py  stealth.py
output/chatgpt-register/: SKILL.md  skill.py
packaging/chocolatey/: freeact.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/homebrew/: freeact.rb
tests/: test_config.py  test_proxy.py  test_session.py
