[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freeact"
version = "0.1.0"
description = "Free Browser Agent CLI — open-source browser automation for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "FreeAct Team"}
]
keywords = [
    "browser-automation",
    "ai-agents",
    "web-scraping",
    "playwright",
    "cli",
    "agent-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "playwright>=1.40",
    "typer>=0.9",
    "rich>=13.0",
    "pillow>=10.0",
    "markdownify>=0.3",
]

[project.optional-dependencies]
stealth = [
    "playwright-stealth>=1.0.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
freeact = "freeact.cli:main_cli"

[project.urls]
Homepage = "https://github.com/freeact/freeact"
Repository = "https://github.com/freeact/freeact"
Issues = "https://github.com/freeact/freeact/issues"
Documentation = "https://github.com/freeact/freeact#readme"

[tool.hatch.build.targets.wheel]
packages = ["freeact"]

[tool.ruff]
line-length = 100
target-version = "py312"
