[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freeact-cli"
version = "0.4.0"
description = "Free Browser Agent CLI — undetectable browser automation for AI agents. Controls your real browser via CDP."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "xuviga"}
]
keywords = [
    "browser-automation",
    "ai-agents",
    "web-scraping",
    "playwright",
    "cli",
    "agent-tools",
    "anti-bot",
    "stealth",
    "cdp",
    "opencode",
    "claude-code",
    "undetectable",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "playwright>=1.40",
    "typer>=0.9",
    "rich>=13.0",
    "pillow>=10.0",
    "markdownify>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
freeact = "freeact.cli:main_cli"

[project.urls]
Homepage = "https://github.com/xuviga/freeact"
Repository = "https://github.com/xuviga/freeact"
Issues = "https://github.com/xuviga/freeact/issues"
Documentation = "https://github.com/xuviga/freeact#readme"

[tool.hatch.build.targets.wheel]
packages = ["freeact"]

[tool.ruff]
line-length = 100
target-version = "py312"
